# helloclaw

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/agent/: helloclaw_agent.py
backend/api/: chat.py  config.py  memory.py  session.py
backend/channels/: __init__.py
backend/src/: main.py
backend/src/agent/: helloclaw_agent.py  llm.py  simple_agent.py
backend/src/api/: chat.py  config.py  memory.py  session.py
backend/src/memory/: __init__.py
backend/src/tools/: __init__.py
backend/src/tools/builtin/: __init__.py  memory.py
backend/src/workspace/: manager.py
backend/src/workspace/templates/: AGENTS.md  config.json
backend/tools/builtin/: __init__.py  identity.py
backend/workspace/: __init__.py
backend/workspace/templates/: AGENTS.md
docs/: api.md  features.md  memory-system.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/api/: chat.ts  config.ts  session.ts
frontend/src/assets/: main.css
frontend/src/components/: ChatMessage.vue
frontend/src/utils/: toolDisplay.ts
frontend/src/views/: ChatView.vue  ConfigView.vue  SessionsView.vue
tests/: memory-api-test.sh  memory-frontend-test-cases.md  memory-test-cases.md
